Changelog (English)
===================

1.5.3
Added an option to change the chroot directory
Added unchroot script
Implemented integration with Android
Implemented integration with XServer XSDL

1.5.2
Added support Slackware
Added support Kali Linux 2.0 (sana)
Added support tar.xz for RootFS installation
Added support x86_64 (amd64) distributions
Added export a container as rootfs archive (tgz or tbz2)
Modified update ENV mechanism
Updated command line interface
Added ability to change password from GUI
Translated into Vietnamese
Updated root checker
Added support aarch64 for Arch Linux
Fixed autostart problem

1.5.1
Added support for installation type in RAM
Updated command "status"
Updated security groups
Added fix for tty0 (use X options: "-sharevts vt0")
Added handling for shutdown event
Added support Ubuntu 15.10 (Wily Werewolf)
Added support Fedora 22 (armhfp only)
Added more locales
Translated into German, Italian, Spanish and Chinese

1.5.0
Added support for devices with an Intel architecture
Added support for cross-architecture installation x86 <-> ARM based on QEMU (binfmt_misc require support in the kernel)
Updated built-in BusyBox to version 1.23.0 (builds with PIE and without PIE)
Added support Ubuntu 15.04 (Vivid Vervet)
Added suits kali-dev and kali-rolling in Kali Linux
Bugfix "Couldn't find these debs: 0"
Fixed Gentoo installation problems
Updated linuxdeploy shell

1.4.9
Added support for third-party BusyBox (required /system/xbin/ash)
Added support Ubuntu 14.10 (Utopic Unicorn)
Added support arm64/aarch64 for some distributions

1.4.8
Added support Android 5 (PIE support)
Added support Fedora 21 (armhfp only)
Fixed LD_PRELOAD errors

1.4.7
Fixed packages list of Arch Linux (issue #161)
Fixed error with VNC_ARGS (issue #153)
User root is added to the group aid_inet be default (ticket #135)
Takes into account changes in openSUSE repository (ticket #154)
Save and restore SELinux state (ticket #167)

1.4.6
Added option to disable the built-in shell